--- a/todo.html
+++ b/todo.html
@@ -24,6 +24,6 @@
             </ul>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
